--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,21 +1,18 @@
+---
 builds:
 - 
   main: ./cmd/koala/main.go
   env:
   - CGO_ENABLED=0
+
 archive:
-  replacements:
-    darwin: Darwin
-    linux: Linux
-    windows: Windows
-    386: i386
-    amd64: x86_64
+  name_template: "{{.ProjectName}}_{{.Version}}_{{.Os}}_{{.Arch}}"
+  format: tar.gz
+
 checksum:
-  name_template: 'checksums.txt'
-snapshot:
-  name_template: "{{ .Tag }}-next"
+  name_template: '{{.ProjectName}}_checksums.txt'
+
 changelog:
-  sort: asc
   filters:
     exclude:
     - '^docs:'
