--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,6 @@ language: go
 deploy:
 - provider: script
   skip_cleanup: true
-  script: make release
+  script: curl -sL https://git.io/goreleaser | bash
   on:
     tags: true
